--- a/data/home.html
+++ b/data/home.html
@@ -1,1 +1,55 @@
+<div class="new-content">	
+	<h2>What is GMO Food?</h2> 
+	<div class="article-content">        
+		<figure>
+			<img src="img/home-01.jpg" alt=""/>
+			<figcaption>GMO Food</figcaption>
+		</figure>
+		<p>
+			A GMO, or genetically modified organism, is a plant, animal, microorganism or other organism whose genetic makeup has been modified in a laboratory using genetic engineering or transgenic technology. This creates combinations of plant, animal, bacterial and virus genes that do not occur in nature or through traditional crossbreeding methods.
+		</p>
+		<p>
+			Genetic modification affects many of the products we consume on a daily basis. As the number of GMOs available for commercial use grows every year, the Non-GMO Project works diligently to provide the most accurate, up-to-date standards for non-GMO verification.
+		</p>
+	</div>
+</div>
 
+<hr>
+
+<div class="new-content">
+	<h2>Which foods might contain GMOs?</h2> 	        
+	<div class="article-content">  
+		<figure>
+			<img src="img/home-02.jpg" alt=""/>
+			<figcaption>Corn</figcaption>
+		</figure>
+		<p>
+		   Most packaged foods contain ingredients derived from corn, soy, canola, and sugar beet — and the vast majority of those crops grown in North America are genetically modified.
+		</p>
+		<p>
+			Animal products: The Non-GMO Project also considers livestock, apiculture, and aquaculture products at high risk because genetically engineered ingredients are common in animal feed. This impacts animal products such as: eggs, milk, meat, honey, and seafood.
+		</p>
+		<p>
+			Processed inputs, including those from synthetic biology: GMOs also sneak into food in the form of processed crop derivatives and inputs derived from other forms of genetic engineering, such as synthetic biology. Some examples include: hydrolyzed vegetable protein corn syrup, molasses, sucrose, textured vegetable protein, flavorings, vitamins  yeast products, microbes & enzymes, flavors, oils & fats, proteins, and sweeteners.
+		</p>
+	</div>
+</div>
+
+
+<hr>
+
+<div class="new-content">
+	<h2>What are the impacts of GMOs on the environment?</h2>
+	<div class="article-content">  	         
+		<figure>
+			<img src="img/home-03.jpg" alt=""/>
+			<figcaption>Crops</figcaption>
+		</figure>
+		<p>
+		   More than 80% of all genetically modified crops grown worldwide have been engineered for herbicide tolerance.2 As a result, the use of toxic herbicides, such as Roundup®, has increased fifteenfold since GMOs were first introduced.3 In March 2015, the World Health Organization determined that the herbicide glyphosate (the key ingredient in Roundup®) is “probably carcinogenic to humans.”
+		</p>
+		<p>
+			Genetically modified crops also are responsible for the emergence of “superweeds” and “superbugs,” which can only be killed with ever more toxic poisons such as 2,4-D (a major ingredient in Agent Orange).
+		</p>
+	</div>
+</div>
