--- a/data/portfolio.html
+++ b/data/portfolio.html
@@ -1,1 +1,50 @@
+<section class="service-section portfolio-style">
+	<h2>Portfolio</h2>
 
+	<div class=row-two>
+
+		<div class=service-box>					
+			<figure>
+				<img src="img/portfolio-01.jpg" alt="portfolio 1">
+				<figcaption>GMO FOOD 1</figcaption>
+			</figure>					
+		</div>
+
+		<div class=service-box>
+			<figure>
+				<img src="img/portfolio-02.jpg" alt="portfolio 2">
+				<figcaption>GMO FOOD 2</figcaption>
+			</figure>
+		</div>
+		
+		<div class=service-box>
+			<figure>
+				<img src="img/portfolio-03.jpg" alt="portfolio 3">
+				<figcaption>GMO FOOD 3</figcaption>
+			</figure>
+		</div>
+		
+		<div class=service-box>
+			<figure>
+				<img src="img/portfolio-04.jpg" alt="portfolio 4">
+				<figcaption>GMO FOOD 4</figcaption>
+			</figure>
+		</div>
+		
+		<div class=service-box>
+			<figure>
+				<img src="img/portfolio-05.jpg" alt="portfolio 5">
+				<figcaption>GMO FOOD 5</figcaption>
+			</figure>
+		</div>
+		
+		<div class=service-box>
+			<figure>
+				<img src="img/portfolio-06.jpg" alt="portfolio 6">
+				<figcaption>GMO FOOD 6</figcaption>
+			</figure>
+		</div>
+		
+	</div>
+		
+</section>
