--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Green Energy</title>   
+	<title>Hot Topics</title>   
     <!--	link the css file-->    
 	<link rel="stylesheet" type="text/css" href="css/style.css">      
     <!--	link the fontawesome css file     -->
